css/styles.css
body {
    margin: 0;
    font-family: Arial, sans-serif;
}

header {
    background: linear-gradient(0deg, #101955 0%, #26489e 100%);
    display: flex;
    flex-direction: column;
    align-items: center;
    color: white;
    padding: 20px;
}

.containerheader {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    max-width: 1080px;
    display: grid;
    grid-template-columns: 45% 55%;
    justify-content: space-around;
    align-items: flex-end;
}

.search-bar {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin-top: 20px;
}

.search-field {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    margin-top: 10px;
}

.search-field input[type="text"] {
    width: calc(100% - 40px);
    height: 30px;
    border-radius: 25px;
    padding: 5px 10px;
    border: 1px solid #ffffff;
    background-color: transparent;
    font-size: 14px;
    color: #ffffff;
    margin-right: 10px;
}

.search-field label {
    margin-left: 10px;
}

.logo {
    margin-top: 20px;
    display: flex;
    align-self: center;
    justify-self: flex-end;
}

.logo img {
    width: 200px;
}

input::-webkit-input-placeholder {
    color: #ffffff !important;
}

input:-moz-placeholder {
    color: #ffffff !important;
}

input::-moz-placeholder {
    color: #ffffff !important;
}

input:-ms-input-placeholder {
    color: #ffffff !important;
}

.search-bar button {
    background: #26489e;
    color: white;
    border: none;
    padding: 5px 10px;
    border-radius: 15px;
    cursor: pointer;
}

nav {
    background: #26489e;
    display: flex;
    justify-content: space-around;
    padding: 10px 0;
}

nav a {
    color: white;
    text-decoration: none;
    padding: 0 20px;
    font-size: 16px;
}

.containerheader p {
    font-size: 1.4rem;
    text-align: justify;
    margin-left: 18px;
}

.activity-bar {
    background: #eef2f1;
    display: flex;
    width: 100%;
    justify-content: space-around;
    padding: 10px 0;
}

.activity-bar select {
    width:50%;
    padding: 8px;
    margin: 0 10px;
    font-size: 14px;
    border: 1px solid #ccc;
    border-radius: 5px;
    background-color: #f5f5f5;
    color: #333;
    cursor: pointer;
}

.select-group {
    width: 100%;
    max-width: 1080px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.label {
    font-size: 12px;
}

.select {
    padding: 10px;
    margin-top: 5px;
    font-size: 14px;
    border: 1px solid #ccc;
    border-radius: 5px;
    background-color: #f5f5f5;
    color: #333;
    cursor: pointer;
}

.activity-bar select:focus {
    outline: none;
    border-color: #101955;
}

.activity-bar select:hover {
    background-color: #e9e9e9;
}

.activity-bar select option {
    background-color: #f5f5f5;
    color: #333;
}

.activity-bar select option:hover {
    background-color: #e9e9e9;
}

.company-container {
    max-width: 1200px;
    margin: 0 auto;
    background-color: white;
    padding: 20px;
    text-align: center;
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    gap: 12px;
}

.column {
    flex: 0 0 32%;
    padding: 10px;
    box-sizing: border-box;
    position: relative;
    border-radius: 8px;
    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
}

.badge {
    position: absolute;
    top: 0;
    left: 0;
    padding: 3px 6px;
    background-color:#26489e;
    color: white;
    font-size: 0.8rem;
    border-radius: 8px;
    box-shadow: 0 2px 4px rgba(255, 255, 255, 0.2);
}

.column img{
    width: 100%;
}

.overlay {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.7);
    color: black;
    text-align: center;
    padding-top: 50%;
    box-sizing: border-box;
    transition: opacity 0.3s;
    z-index: 1002;
}

.overlay.active {
    display: block;
}

.overlay-content {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 80%;
    max-width: 600px;
    background-color: rgba(255, 255, 255, 0.9);
    padding: 20px;
    text-align: left;
    border-radius: 5px;
}

.overlay-content img{
    width: 80%;
    display: block;
    margin: 0 auto;
}

h2 {
    padding: 36px 0;
    margin: auto;
    text-align: center;
    font-weight: 400;
    font-size: calc(max(18px, 1.8vw)) !important;
}

@media only screen and (max-width: 768px) {
    header {
        overflow: hidden;
    }

    .search-bar {
        flex-direction: column;
        align-items: center;
    }

    .search-bar input[type="text"] {
        width: 80%;
        margin-bottom: 10px;
    }

    #citySelect {
        width: 80%;
        margin-bottom: 10px;
    }

    .search-bar button {
        width: 80%;
    }

    .containerheader {
        grid-template-columns: 100%;
    }

    .activity-bar {
        flex-direction: column;
        align-items: center;
    }

    .select-group{
        flex-direction: column;
        align-items: center;
    }

    .activity-bar select {
        width: 90%;
        margin-bottom: 10px;
    }

    .column {
        flex: 0 0 48%;
        margin-bottom: 20px;
    }

    .containerheader {
        grid-template-columns: 1fr;
    }

    .logo {
        order: 2;
    }

    .search-bar {
        order: 3;
    }

    .search-field {
        width: 90%;
        margin: 10px auto;
    }

    .logo img {
        position: absolute;
        top:20px;
        right: 10px;
        max-width: 100px;
        order: 1;
        margin-bottom: 20px;
    }

    .content p {
        width: 60%;
        text-align: center;
        order: 2;
        position: relative;
        top: -30px;
        font-size: 0.8rem;
    }

    .overlay-content img{
        width: 300px;
    }
}

#citySelect{
    width: 100%;
    color:#fff!important;
}
.select2-container--default .select2-selection--single .select2-selection__rendered{
    color:#fff!important;
}

.select2-container .select2-selection--single .select2-selection__rendered{
    padding-left: 12px !important;
    border: white solid 1px;
    background-color: #101955 !important;
    border-radius: 25px;
}
.select2-container--default .select2-selection--single{
    background-color: transparent!important;
    border: none!important;
}
.select2-container--default .select2-results__option--highlighted[aria-selected] {
    background-color: #101955 !important;
}

.overlay-content .badge {
    position: absolute;
    width: 100%;
    text-align: center;
    padding: 8px 0;
    background-color: #101955;
    color: #fff;
    border-radius: 5px;
    font-size: 12px;
  }

  .activity-bar select option:hover {
    background-color: #101955;
}

.overlay-content h4{
    border-top: #101955 solid 2px;
    padding-top: 10px;
}

